--- a/requirements_lora.txt
+++ b/requirements_lora.txt
@@ -1,8 +1,11 @@
 # ============================================================
 # LoRA Training Requirements
-# PyTorch 2.7.1 + CUDA 12.6/12.8 환경
+# ⚠️ 설치 순서가 중요합니다! 아래 순서대로 설치하세요.
 # ============================================================
 
+# ============================================================
+# Step 1: PyTorch (CUDA 12.6)
+# ============================================================
 --index-url https://download.pytorch.org/whl/cu126
 torch==2.7.1 
 torchvision==0.22.1 
@@ -11,16 +14,7 @@ torchaudio==2.7.1
 --extra-index-url https://pypi.org/simple
 
 # ============================================================
-# Unsloth & Flash Attention (LoRA 학습 핵심)
-# ============================================================
-# Unsloth - CUDA 12.8 + PyTorch 2.7.1 버전
-unsloth[cu128-torch271] @ git+https://github.com/unslothai/unsloth.git
-
-# Flash Attention 2.8.3 - CUDA 12 + Python 3.12
-https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.7cxx11abiTRUE-cp311-cp311-linux_x86_64.whl
-
-# ============================================================
-# HuggingFace & Training
+# Step 2: HuggingFace & Training 기본 패키지
 # ============================================================
 peft
 accelerate
@@ -31,7 +25,7 @@ transformers==4.56.0
 bitsandbytes
 
 # ============================================================
-# Utilities
+# Step 3: Utilities
 # ============================================================
 ninja
 packaging
@@ -39,16 +33,20 @@ python-dotenv
 jsonlines
 
 # ============================================================
-# Visualization & Analysis
+# Step 4: Visualization & Analysis
 # ============================================================
 tensorboard
 matplotlib
 seaborn
 pandas
 numpy
-
-# ============================================================
-# Misc
-# ============================================================
 rich
 
+# ============================================================
+# Step 5: Unsloth & Flash Attention (마지막에 설치!)
+# ⚠️ 위의 모든 패키지 설치 후, 아래 명령어로 별도 설치하세요:
+#
+#   pip install "unsloth[cu128-torch271] @ git+https://github.com/unslothai/unsloth.git"
+#   pip install https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl
+#
+# ============================================================
